Add nptyping dependencies

--- a/env.yml
+++ b/env.yml
@@ -31,4 +31,6 @@ dependencies:
   - xz=5.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
   - pip:
+      - nptyping==1.3.0
+      - typish==1.7.0
       - yapf==0.30.0
