--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-  "editor.tabSize": 4,
-  "editor.detectIndentation": false,
-  "editor.insertSpaces": true,
-  "python.formatting.provider": "yapf"
+	"editor.tabSize": 4,
+	"editor.detectIndentation": false,
+	"editor.insertSpaces": true,
+	"python.formatting.provider": "yapf",
+	"python.formatting.yapfArgs": ["--style", "{based_on_style: facebook, indent_width: 4, column_limit: 100}"]
 }
