--- a/env.yml
+++ b/env.yml
@@ -49,6 +49,12 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
   - pip:
-      - nptyping==1.3.0
-      - typish==1.7.0
-      - yapf==0.30.0
+    - joblib==0.17.0
+    - nptyping==1.3.0
+    - scikit-learn==0.23.2
+    - scipy==1.5.2
+    - sklearn==0.0
+    - threadpoolctl==2.1.0
+    - typish==1.7.0
+    - yapf==0.30.0
+
