--- a/env.yml
+++ b/env.yml
@@ -49,12 +49,15 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
   - pip:
+    - cycler==0.10.0
     - joblib==0.17.0
+    - kiwisolver==1.2.0
+    - matplotlib==3.3.2
     - nptyping==1.3.0
+    - python-dateutil==2.8.1
     - scikit-learn==0.23.2
     - scipy==1.5.2
     - sklearn==0.0
     - threadpoolctl==2.1.0
     - typish==1.7.0
     - yapf==0.30.0
-
